k8s-manifests/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f compose.yml -o k8s-manifests/
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    io.kompose.service: client
  name: client
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: client
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f compose.yml -o k8s-manifests/
        kompose.version: 1.36.0 (ae2a39403)
      labels:
        io.kompose.service: client
    spec:
      containers:
        - env:
            - name: N_RUNS
              value: "20"
          image: client
          imagePullPolicy: Never
          name: client
      restartPolicy: Always
