k8s-manifests/database-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: database
spec:
  serviceName: "postgres"
  replicas: 2
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: bitnami/postgresql:16
        command: ["/bin/bash", "-c"]
        args:
          - |
            if [[ "$(hostname)" == *-0 ]]; then
              export POSTGRESQL_REPLICATION_MODE=master;
            else
              export POSTGRESQL_REPLICATION_MODE=slave;
              export POSTGRESQL_MASTER_HOST=database-0.postgres;
            fi;
            /opt/bitnami/scripts/postgresql/entrypoint.sh /opt/bitnami/scripts/postgresql/run.sh
        ports:
          - containerPort: 5432
            name: postgres
        volumeMounts:
          - name: data
            mountPath: /bitnami/postgresql
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 100Mi
