k8s-manifests/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f compose.yml -o k8s-manifests/
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    io.kompose.service: server
  name: server
spec:
  replicas: 2
  selector:
    matchLabels:
      io.kompose.service: server
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f compose.yml -o k8s-manifests/
        kompose.version: 1.36.0 (ae2a39403)
      labels:
        io.kompose.service: server
    spec:
      containers:
        - env:
            - name: DATABASE_URL
              value: postgresql://admin:admin@database:5432/app
            - name: PHP_CS_FIXER_IGNORE_ENV
              value: "1"
            - name: PUBLIC_URL
              value: http://localhost:8080
            - name: SERVER_NAME
              value: :80
            - name: TRUSTED_HOSTS
              value: ^example\.com|localhost|php$
          image: api
          imagePullPolicy: Never
          name: server
          ports:
            - containerPort: 80
              protocol: TCP
      restartPolicy: Always
