k8s-manifests/ihm-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f compose.yml -o k8s-manifests/
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    io.kompose.service: ihm
  name: ihm
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
  selector:
    io.kompose.service: ihm
