k8s-manifests/external-access-policy.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f compose.yml -o k8s-manifests/
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    io.kompose.service: server
  name: server
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: 80
  selector:
    io.kompose.service: server
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f compose.yml -o k8s-manifests/
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    io.kompose.service: ihm
  name: ihm
spec:
  type: LoadBalancer
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    io.kompose.service: ihm
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-only-service-ports
spec:
  podSelector: {} 
  ingress:
    - ports:
        - protocol: TCP
          port: 80
      from:
        - ipBlock: { cidr: "0.0.0.0/0" }
        - podSelector: {} 
    - ports:
        - protocol: TCP
          port: 3000
      from:
        - ipBlock: { cidr: "0.0.0.0/0" }
        - podSelector: {}
  policyTypes:
    - Ingress
